    when looking up the question to submit.

  * Fixed the lack of decompression of uploaded files when downloaded via the
    'Download Most Recent Submission' link.

  * Fixed an issue that caused the contents of `<ref>` tags to be ignored.

  * Fixed several issues with the openid_connect implementation to make it more
    general.

SECURITY:

DOCUMENTATION:


##################
# Version 14.0.3 #
##################

FIXED:

  * Fix for issue with multiple blank lines in output from `pythoncode`
    questions.


##################
# Version 14.0.2 #
##################

FIXED:

  * Fix for a UI issue with the alignment of the timer when used in an iframe.

  * Fixed an issue with the `post_load` hook not being able to affect page
    content.

  * Fixed the LTI behavior by passing form POSTs through, if the session is
    already LTI authenticated.

  * Fixed a regression from `language.py` changes that prevented content after
    the last question on a page from being rendered.

  * Fixed a regression from `language.py` that prevented footnotes from being
    shown in most cases.

  * Fixes for Python unicode.


##################
# Version 14.0.1 #
##################

FIXED:

  * Fix for a problem with unicode characters in the `pythoncode` question type
    when using the `'ace'` interface.

  * Fixed an issue with older Pythons by using an `OrderedDict` to store
    `cs_internal_qinfo` in `language.py`.


##################
# Version 14.0.0 #
##################

ADDED:

  * Added the `dummy` question type, which can be used as a placeholder for a
    question that should be removed (but without affecting
    automatically-generated `csq_name`s for questions that follow.

  * Added support for using CAT-SOOP as an LTI Tool Provider (courtesy of Ike
    Chuang).

  * Added a few unit tests (courtesy of Ike Chuang).

  * Added `cs_debug_logger`, an instance of `logging.Logger`, for debugging
    (courtesy of Ike Chuang).
